fix: section show sidebar overflow in mobile device

--- a/app/javascript/stylesheets/section_show.scss
+++ b/app/javascript/stylesheets/section_show.scss
@@ -18,14 +18,14 @@
 
   .show {
     top: 5rem;
-    min-height: min-content;
-    transition: top 0.3s linear, bottom 0.3s linear;
+    max-height: min-content;
+    transition: top 0.3s linear;
   }
 
   .fade {
-    top: -150%;
-    min-height: min-content;
-    transition: top 0.3s linear, bottom 0.3s linear;
+    top: -500%;
+    max-height: min-content;
+    transition: top 0.3s linear;
   }
 
   .loading::after {
